working in progress. Added in GridView, Movie pojo. But there is bug in the adapter. Need to fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
-    <string name="app_name">PopularMovieApplication</string>
+    <string name="app_name">Popular Movies</string>
+
     <string name="action_settings">Settings</string>
+
+    <string name="list_movie_image_description">This is the ImageView for listing movie thumbnail.</string>
+
+
 </resources>
